# CyberSnatcher

./: .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json  push_to_github.bat  tailwind.config.js  vite.config.ts
.github/workflows/: auto-merge-claude.yml
cyber snatcher tools/: CyberSnatcherRelease.bat  CyberSnatcherRelease.ps1  CyberSnatcher_Launcher.ps1  Launch_CyberSnatcher.bat
scripts/: kill-port.cjs  kill-port.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dash.rs  ffmpeg.rs  hls.rs  lib.rs  license.rs  main.rs  mp4patch.rs  types.rs  ytdlp.rs
src-tauri/src/commands/: analyze.rs  browser.rs  browser_download.rs  browser_settings.rs  convert.rs  detect.rs  download.rs  favorites.rs  mod.rs  native.rs  overlay.rs  recording.rs  scraper.rs  settings.rs  stream.rs
src-tauri/src/engine/: direct.rs  download.rs  http.rs  mod.rs
src-tauri/src/engine/dash/: mod.rs  parser.rs
src-tauri/src/engine/hls/: crypto.rs  live.rs  mod.rs  parser.rs
src-tauri/src/scraper/: engine.rs  exporter.rs  middleware.rs  mod.rs  pipeline.rs  selector.rs  spider.rs  types.rs
src/components/: BrowserTab.tsx  ConverterTab.tsx  ScraperTab.tsx  StatusBar.tsx  TitleBar.tsx
src/components/Browser/: BrowserBar.tsx  BrowserView.tsx  DetectedVideos.tsx  (+1 more)
src/data/: supportedSites.ts
src/hooks/: useDownloads.ts  useSettings.ts
src/lib/: tauri.ts  types.ts
src/stores/: browserStore.ts  downloadStore.ts
(+12 files in other folders)
