[package]
name = "cybersnatcher"
version = "0.1.0"
description = "A cyberpunk media tool"
authors = ["you"]
edition = "2021"

[lib]
name = "cybersnatcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
reqwest = { version = "0.12", features = ["stream", "json", "blocking"] }
url = "2"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
block-padding = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
xcap = "0.8"
gif = "0.13"
image = "0.25"
roxmltree = "0.20"
